syntax = "proto3";

package recurso;

service RecursoService {
  rpc CrearRecurso (CrearRecursoRequest) returns (CrearRecursoResponse);
}

message CrearRecursoRequest {
  string tipo = 1;
  int32 identificador = 2;
  int32 formato = 3;
  int32 tamano = 4;
  string url = 5;
  int32 usuarioId = 6;

  oneof especifico {
    int32 resolucion = 7;
    int32 duracion = 8;
  }

  bytes archivo = 9;
}

message CrearRecursoResponse {
  bool exito = 1;
  string mensaje = 2;
}
